add sql day 1 exercises and some corrections on the python ones

--- a/02-advanced-python/personal- extra.ipynb
+++ b/02-advanced-python/personal- extra.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "b275ce2e-cb0d-43e5-8c5e-b19e9559319f",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "b3991b69-231f-473b-ba69-25c89df433ea",
    "metadata": {
     "scrolled": true
@@ -30,30 +30,10 @@
     {
      "data": {
       "text/plain": [
-       "[1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 170,\n",
-       " 169,\n",
-       " 168,\n",
-       " 167,\n",
-       " 166,\n",
-       " 165,\n",
-       " 164,\n",
-       " 163,\n",
-       " 162,\n",
-       " 161,\n",
-       " 160]"
+       "[170, 169, 168, 167, 166, 165, 164, 163, 162, 161, 160]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "598af530-c4ee-410c-91c2-f2a5db18b4dc",
    "metadata": {},
    "outputs": [
@@ -96,7 +76,7 @@
        " (30, 900, 27000)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "2fa314b1-451b-4603-a221-257dedd5035e",
    "metadata": {},
    "outputs": [],
@@ -123,26 +103,23 @@
     "def prime_special(l: list) -> list:\n",
     "    return [elem for elem in l if is_prime(elem) and sum(map(int, str(elem))) % 2 == 1]\n",
     "\n",
-    "def is_prime(n: int) -> bool:\n",
+    "# since sqrt(n) * sqrt(n) = n any other number combination whose product would result to n must be a combination of a number\n",
+    "# higher that sqrt(n) and one lower. So to verify that a number is not a prime we can make sure than there is no lower or no higher \n",
+    "# number than sqrt(n) that divides with no remainder n.\n",
+    "# In short there cant be a combination of divisors that does not involve a higher and a lower divisor than its sqrt\n",
+    "# the edge case is the sqrt itself which we must check too\n",
+    "def is_prime(n):\n",
     "    if n <= 1:\n",
     "        return False\n",
-    "    if n <= 3:\n",
-    "        return True  # 2 and 3 are prime\n",
-    "    if n % 2 == 0 or n % 3 == 0:\n",
-    "        return False\n",
-    "\n",
-    "    i = 5\n",
-    "    while i * i <= n:\n",
-    "        if n % i == 0 or n % (i + 2) == 0:\n",
+    "    for i in range(2, int(n ** 0.5) + 1):\n",
+    "        if n % i == 0:\n",
     "            return False\n",
-    "        i += 6\n",
-    "\n",
     "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "9ade5d02-194a-41bb-81a8-3d9db54d4f8f",
    "metadata": {},
    "outputs": [
@@ -175,7 +152,7 @@
        " 199]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b6384900-2cec-4043-a2b4-7441fe67901d",
    "metadata": {},
    "outputs": [],
@@ -215,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "3e8100d9-6cd8-428b-91a9-6a2160509f9b",
    "metadata": {},
    "outputs": [
@@ -225,7 +202,7 @@
        "[7, 10, 9]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "90cb8774-a4ba-43be-9855-703bb06fab52",
    "metadata": {},
    "outputs": [],
@@ -264,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "1ed27cd0-b06e-401f-8861-6b68cdc2b8cf",
    "metadata": {},
    "outputs": [
@@ -278,7 +255,7 @@
        " 'error_code': 99.8}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "f3cce6d0-8fa1-4976-9165-33545e89b29c",
    "metadata": {},
    "outputs": [],
@@ -318,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "9d62c276-f876-478b-993e-132db4088543",
    "metadata": {},
    "outputs": [
@@ -328,7 +305,7 @@
        "[True, True, False, True, False, True, False, True, True, True]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "9bc9233d-a7c1-4028-b820-7c87e4304d69",
    "metadata": {},
    "outputs": [],
@@ -360,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "0972bf1b-8381-4c40-b6ff-9916f050c7c6",
    "metadata": {},
    "outputs": [
@@ -379,7 +356,7 @@
        " 'ivy.grey@email.com']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "801b75b5-5028-4326-8c21-314536241dcd",
    "metadata": {},
    "outputs": [],
@@ -415,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "c32e38f2-c56a-4d2b-b591-ea0ff1883258",
    "metadata": {},
    "outputs": [
@@ -425,7 +402,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "e3b4df3d-ef9f-4517-b020-b2ce33e4a1f0",
    "metadata": {},
    "outputs": [
@@ -446,7 +423,7 @@
        "[[1, 2, 3], [-1, 2, 3], [4, 5, 6], [-4, -5, 6], [7, 8, 9], [-7, 8, 9]]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "b0e0378a-4acd-407b-b466-19daddb6713c",
    "metadata": {},
    "outputs": [],
@@ -481,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "5e224a3f-c1af-4083-a896-bfd7ce82e274",
    "metadata": {},
    "outputs": [
@@ -491,7 +468,7 @@
        "['Jane', 'Bob']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "265bca02-7b03-4d1b-9fa6-03eac709bdea",
    "metadata": {},
    "outputs": [],
@@ -527,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "6ecc85a7-9302-4e09-b8c3-d4bcc9448362",
    "metadata": {},
    "outputs": [
@@ -537,7 +514,7 @@
        "162.5"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "f58acdbd-481d-48a8-8173-f83da5dc57a0",
    "metadata": {},
    "outputs": [
@@ -560,7 +537,7 @@
        "{'item3': 200, 'item4': 300, 'item6': 175}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "id": "e558e202-165e-4eb6-9fc4-ad5a9f68ea78",
    "metadata": {},
    "outputs": [],
@@ -600,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "6a43cf92-381d-4f67-8c1e-c4bad667edcf",
    "metadata": {},
    "outputs": [
@@ -615,7 +592,7 @@
        " '2025-04-06': 23.0}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "id": "8ac47101-baa7-40bb-9339-b8d83e676d8a",
    "metadata": {},
    "outputs": [],
@@ -655,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "id": "5ac90e93-da90-44bd-9b9c-a3f5646376e6",
    "metadata": {},
    "outputs": [],
@@ -674,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 26,
    "id": "dbb0ee1e-889a-465e-bcaa-5532d51ce3b9",
    "metadata": {},
    "outputs": [
@@ -684,7 +661,7 @@
        "'og'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "id": "a7307cb2-3280-492f-9332-e5f1ba4cbe17",
    "metadata": {},
    "outputs": [],
@@ -722,19 +699,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "id": "2cb1cc50-59df-4bee-a7fe-1e1fd28ca771",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'john': datetime.datetime(2025, 4, 4, 13, 36, 18, 280382),\n",
-       " 'jane': datetime.datetime(2025, 3, 30, 13, 36, 18, 280382),\n",
-       " 'bob': datetime.datetime(2025, 4, 7, 13, 36, 18, 280382)}"
+       "{'john': datetime.datetime(2025, 4, 20, 16, 0, 57, 553027),\n",
+       " 'jane': datetime.datetime(2025, 4, 15, 16, 0, 57, 553027),\n",
+       " 'bob': datetime.datetime(2025, 4, 23, 16, 0, 57, 553027)}"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 29,
    "id": "36f7cb79-fb41-4317-ab3f-dc4fd2c82a0d",
    "metadata": {},
    "outputs": [],
@@ -767,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 30,
    "id": "27821294-717c-4cc7-92bd-88ef8ac141da",
    "metadata": {},
    "outputs": [
@@ -782,7 +759,7 @@
        " 'cookies': 1.8}"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 31,
    "id": "0f7dda19-be9b-428c-b642-004eb38e626f",
    "metadata": {},
    "outputs": [],
@@ -811,43 +788,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "8b889f8c-154c-438f-8bd8-0957202f1216",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(int,\n",
-       "            {'t': 2,\n",
-       "             'h': 2,\n",
-       "             'e': 3,\n",
-       "             'q': 1,\n",
-       "             'u': 2,\n",
-       "             'i': 1,\n",
-       "             'c': 1,\n",
-       "             'k': 1,\n",
-       "             'b': 1,\n",
-       "             'r': 2,\n",
-       "             'o': 4,\n",
-       "             'w': 1,\n",
-       "             'n': 1,\n",
-       "             'f': 2,\n",
-       "             'a': 9,\n",
-       "             's': 6,\n",
-       "             'd': 5,\n",
-       "             'x': 1,\n",
-       "             'j': 1,\n",
-       "             'm': 1,\n",
-       "             'p': 1,\n",
-       "             'v': 1,\n",
-       "             'l': 1,\n",
-       "             'z': 1,\n",
-       "             'y': 1,\n",
-       "             'g': 1})"
+       "[('a', 9),\n",
+       " ('b', 1),\n",
+       " ('c', 1),\n",
+       " ('d', 5),\n",
+       " ('e', 3),\n",
+       " ('f', 2),\n",
+       " ('g', 1),\n",
+       " ('h', 2),\n",
+       " ('i', 1),\n",
+       " ('j', 1),\n",
+       " ('k', 1),\n",
+       " ('l', 1),\n",
+       " ('m', 1),\n",
+       " ('n', 1),\n",
+       " ('o', 4),\n",
+       " ('p', 1),\n",
+       " ('q', 1),\n",
+       " ('r', 2),\n",
+       " ('s', 6),\n",
+       " ('t', 2),\n",
+       " ('u', 2),\n",
+       " ('v', 1),\n",
+       " ('w', 1),\n",
+       " ('x', 1),\n",
+       " ('y', 1),\n",
+       " ('z', 1)]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +833,9 @@
     "for ch in input_string:\n",
     "    if ch.isalpha():\n",
     "        d[ch.lower()] += 1\n",
-    "d"
+    "# from collections import Counter # This is better\n",
+    "# d=Counter([ch.lower() for ch in input_string if ch.isalpha()])\n",
+    "sorted(d.items())"
    ]
   },
   {
@@ -870,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 33,
    "id": "6cfc708f-434a-41de-b2bf-72a40f5f77ab",
    "metadata": {},
    "outputs": [],
@@ -882,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "66d0e2e4-2ca0-424d-aec7-379dca5af5c8",
    "metadata": {},
    "outputs": [
@@ -892,7 +870,7 @@
        "{1: ['a', 'c', 'f'], 2: ['b', 'e'], 3: ['d']}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +878,8 @@
    "source": [
     "d = {}\n",
     "for k, v in original_dict.items():\n",
-    "    d[v] = d.get(v, list())\n",
+    "    # d[v] = d.get(v, list()) also works but slower.\n",
+    "    d.setdefault(v, list())\n",
     "    d[v].append(k)\n",
     "d\n",
     "# made it work even without a default dict\n",
@@ -917,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 35,
    "id": "ee84d816-3bf7-4700-b899-6597bdd3656e",
    "metadata": {},
    "outputs": [],
@@ -928,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 36,
    "id": "7200d56c-3ddc-4103-8e08-df2ec355b0e3",
    "metadata": {},
    "outputs": [
@@ -938,7 +917,7 @@
        "[3, 9, 12, 14]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 37,
    "id": "a0f82b01-c595-44f7-bde9-b978a552f6bc",
    "metadata": {},
    "outputs": [],
@@ -967,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 38,
    "id": "3d47d823-cd53-455e-ab1f-1a70a431c458",
    "metadata": {},
    "outputs": [
@@ -977,7 +956,7 @@
        "'(10, 7, 8) with a product of 560'"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 39,
    "id": "609e822a-70df-4df2-8a6a-4480fba58a71",
    "metadata": {},
    "outputs": [
@@ -1015,7 +994,7 @@
        "[1, 4, 16, 25, 36, 64, 81, 100]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1011,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bb_data_edit",
    "language": "python",
    "name": "python3"
   },
