--- a/08-apis/day-1.ipynb
+++ b/08-apis/day-1.ipynb
@@ -247,7 +247,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "863d37a5-37c7-4859-a1d7-f84bb22e04dc",
+       "ref": "2a97ab81-fce9-4cec-8dc4-94f524ff1905",
        "rows": [
         [
          "0",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "24168d27",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "ad585105",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        " 'name': 'Abyssinian'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "2ea324ae",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "48a27aeb",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "bdaeb17c",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8aab1566-23eb-41e8-b4ce-3afdd41d9a32",
+       "ref": "8a93dbc6-712f-4a8d-a664-b5fc340075ff",
        "rows": [
         [
          "0",
@@ -1078,7 +1078,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "675792f9",
    "metadata": {},
    "outputs": [],
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "f86e4663",
    "metadata": {},
    "outputs": [],
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "5658db93",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "d0e236e5",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "d500249f",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1168,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "747b2ee3",
    "metadata": {},
    "outputs": [],
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "8e5da0eb",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b3a2bced-c2c9-405c-98f9-4bd8108800a5",
+       "ref": "4bc7e7b2-1ea4-4df0-a512-5cdcccc3f93e",
        "rows": [
         [
          "Cornish Rex-Cornish Rex",
@@ -1326,7 +1326,7 @@
        "Siberian-Siberian                      4.8             14.5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,19 +1367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "a457b1fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"c051de66c4298416b8ac5b067c73c8841419585d\"\n",
+    "api_key = \"41f683912546398d2c82e7725e429d201c1df3b1\"\n",
     "link = f\"https://www.giantbomb.com/api/games/?filter=platforms%3A35&field_list=id%2Cname%2Coriginal_game_rating%2Coriginal_release_date&sort=name%3Adesc&limit=10&offset=0&api_key={api_key}&format=json\"\n",
     "headers={'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "2805171b",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1389,7 @@
        "dict_keys(['error', 'limit', 'offset', 'number_of_page_results', 'number_of_total_results', 'status_code', 'results', 'version'])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "b30418e0",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1426,7 @@
        " 'original_release_date': '2010-11-30'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,41 +1437,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "a6786558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "174"
+       "1736"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
-    "# get total pages\n",
-    "response_dict_pages = math.ceil(response_dict[\"number_of_total_results\"] / response_dict[\"number_of_page_results\"])\n",
-    "response_dict_pages"
+    "# get total results\n",
+    "total_results = response_dict[\"number_of_total_results\"]\n",
+    "total_results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "e24c6945",
    "metadata": {},
    "outputs": [],
    "source": [
+    "limit = 100  # set the per-page results - increasing will reduce the number of requests\n",
+    "\n",
     "accumulated_results = []\n",
-    "for i in range(response_dict_pages):\n",
-    "    link = f\"https://www.giantbomb.com/api/games/?filter=platforms%3A35&field_list=id%2Cname%2Coriginal_game_rating%2Coriginal_release_date&sort=name%3Adesc&limit=10&offset={i}&api_key={api_key}&format=json\"\n",
+    "for i in range(0, total_results, limit):\n",
+    "    link = f\"https://www.giantbomb.com/api/games/?filter=platforms%3A35&field_list=id%2Cname%2Coriginal_game_rating%2Coriginal_release_date&sort=name%3Adesc&limit={limit}&offset={i}&api_key={api_key}&format=json\"\n",
     "    page_response = requests.get(link, headers=headers)\n",
-    "    logger.info(f\"fetching page {i + 1}, response code: {page_response.status_code}, {response.reason}\")\n",
+    "    logger.info(f\"fetching results {i + 1} to {i + limit}, response code: {page_response.status_code}, {response.reason}\")\n",
     "    # get current page json (dict)\n",
     "    page_response_dict = json.loads(page_response.content)\n",
     "    # get a list of the pages results, and use it to extend our\n",
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "afb321e3",
    "metadata": {},
    "outputs": [
@@ -1489,16 +1489,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1740 entries, 0 to 1739\n",
+      "RangeIndex: 1736 entries, 0 to 1735\n",
       "Data columns (total 4 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
-      " 0   id                     1740 non-null   int64 \n",
-      " 1   name                   1740 non-null   object\n",
-      " 2   original_game_rating   1491 non-null   object\n",
-      " 3   original_release_date  1614 non-null   object\n",
+      " 0   id                     1736 non-null   int64 \n",
+      " 1   name                   1736 non-null   object\n",
+      " 2   original_game_rating   1430 non-null   object\n",
+      " 3   original_release_date  1630 non-null   object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 54.5+ KB\n"
+      "memory usage: 54.4+ KB\n"
      ]
     }
    ],
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "f1a5d88b",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5ebcfe3e-1fa7-4b95-8982-6e95f8f91d6c",
+       "ref": "a912da48-1074-4973-879d-c4cdf9f64992",
        "rows": [
         [
          "0",
@@ -1668,13 +1668,34 @@
        "4  [{'api_detail_url': 'https://www.giantbomb.com...            2013-05-23  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "189f6c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1736"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['id'].nunique()"
    ]
   }
  ],
