webscraping day-1 flexcar exercise minor correction -  strip whitespace in the brand, models, version getter functions in order to fix an error that affected a single row, but could affect more in the future

--- a/09-webscraping/day-1-flexcar.ipynb
+++ b/09-webscraping/day-1-flexcar.ipynb
@@ -411,11 +411,11 @@
    "outputs": [],
    "source": [
     "def get_car_brand(soup: BeautifulSoup):\n",
-    "    return soup.find('h1').text.split(' ')[0]\n",
+    "    return soup.find('h1').text.strip().split(' ')[0]\n",
     "def get_car_model(soup: BeautifulSoup):\n",
-    "    return soup.find('h1').text.split(' ')[1]\n",
+    "    return soup.find('h1').text.strip().split(' ')[1]\n",
     "def get_model_version(soup: BeautifulSoup):\n",
-    "    return ' '.join(soup.find('h1').text.split(' ')[2:])"
+    "    return ' '.join(soup.find('h1').text.strip().split(' ')[2:])"
    ]
   },
   {
@@ -662,7 +662,7 @@
     "                    }\n",
     "                )\n",
     "            except:\n",
-    "                logger.info(f\"error {url}\")\n",
+    "                logger.info(f\"error {url} {(response.code, response.reason)}\")\n",
     "                raise\n",
     "            time.sleep(random.uniform(0.3, 0.4))    \n",
     "\n",
@@ -774,7 +774,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "805c5c58-20c0-4a75-8839-abcea7d0fc13",
+       "ref": "070f8bda-7118-48c0-8561-af4a3c1a00fa",
        "rows": [
         [
          "0",
@@ -796,9 +796,9 @@
         ],
         [
          "1",
-         "",
          "Peugeot",
-         "Partner Diesel (L1H1)",
+         "Partner",
+         "Diesel (L1H1)",
          "PRO",
          "425",
          "diesel",
@@ -929,9 +929,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td></td>\n",
        "      <td>Peugeot</td>\n",
-       "      <td>Partner Diesel (L1H1)</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>Diesel (L1H1)</td>\n",
        "      <td>PRO</td>\n",
        "      <td>425</td>\n",
        "      <td>diesel</td>\n",
@@ -1006,7 +1006,7 @@
       "text/plain": [
        "     brand    model                           version category price (EUR)  \\\n",
        "0  Citroen      Ami                  Electric (Cargo)      PRO         240   \n",
-       "1           Peugeot             Partner Diesel (L1H1)      PRO         425   \n",
+       "1  Peugeot  Partner                     Diesel (L1H1)      PRO         425   \n",
        "2  Citroen   Jumper                     Diesel (L4H3)      PRO         745   \n",
        "3     Fiat    Doblo  Diesel (Cargo Tecnico Pack L1H1)      PRO         495   \n",
        "4     Ford  Transit       Courier Diesel (Trend L1H1)      PRO         495   \n",
@@ -1197,7 +1197,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d2e357c2-1853-44a7-ad27-5c9c9cab90ea",
+       "ref": "d2052cfc-6182-43ff-9eb6-adc132891cbb",
        "rows": [
         [
          "0",
@@ -1219,9 +1219,9 @@
         ],
         [
          "1",
-         "",
          "Peugeot",
-         "Partner Diesel (L1H1)",
+         "Partner",
+         "Diesel (L1H1)",
          "PRO",
          "425",
          "diesel",
@@ -1352,9 +1352,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td></td>\n",
        "      <td>Peugeot</td>\n",
-       "      <td>Partner Diesel (L1H1)</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>Diesel (L1H1)</td>\n",
        "      <td>PRO</td>\n",
        "      <td>425</td>\n",
        "      <td>diesel</td>\n",
@@ -1429,7 +1429,7 @@
       "text/plain": [
        "     brand    model                           version category  price (EUR)  \\\n",
        "0  Citroen      Ami                  Electric (Cargo)      PRO          240   \n",
-       "1           Peugeot             Partner Diesel (L1H1)      PRO          425   \n",
+       "1  Peugeot  Partner                     Diesel (L1H1)      PRO          425   \n",
        "2  Citroen   Jumper                     Diesel (L4H3)      PRO          745   \n",
        "3     Fiat    Doblo  Diesel (Cargo Tecnico Pack L1H1)      PRO          495   \n",
        "4     Ford  Transit       Courier Diesel (Trend L1H1)      PRO          495   \n",
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "8b9ab5f6",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 52,
    "id": "f1339fab",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "17f5f4fe",
    "metadata": {},
    "outputs": [
@@ -1593,13 +1593,13 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3ab39c33-fdd8-4f79-9c27-2e217ac8366c",
+       "ref": "76d87e2e-0ff9-490e-bf7e-8930a945cec5",
        "rows": [
         [
          "71",
          "Suzuki",
          "Swift",
-         "Mild Hybrid (Sport) ",
+         "Mild Hybrid (Sport)",
          "HAT",
          "440",
          "petrol",
@@ -1679,8 +1679,8 @@
        "</div>"
       ],
       "text/plain": [
-       "     brand  model               version category  price (EUR) fuel_type   hp  \\\n",
-       "71  Suzuki  Swift  Mild Hybrid (Sport)       HAT          440    petrol  129   \n",
+       "     brand  model              version category  price (EUR) fuel_type   hp  \\\n",
+       "71  Suzuki  Swift  Mild Hybrid (Sport)      HAT          440    petrol  129   \n",
        "\n",
        "   engine_size (cc)  consumption (lt/100km)  battery capacity (kwh)  \\\n",
        "71             1400                     5.5                    <NA>   \n",
@@ -1698,7 +1698,7 @@
        "71  https://flexcar.gr/cars/suzuki/suzuki-swift-mi...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,12 +1709,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "id": "96800371",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('flexcar.ccsv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ae9f8098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(219, 15)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~df['category'].isin(['SCO', 'B'])].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e0173e25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(244, 15)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "98a5a66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(['brand', 'model', 'price (EUR)'])"
    ]
   }
  ],
