python-oop day-2 exercises - add some documentation on day 1 oop

--- a/11-python-oop/day-1.ipynb
+++ b/11-python-oop/day-1.ipynb
@@ -470,7 +470,7 @@
     "    def __post_init__(self):\n",
     "        if any(map(lambda x: not isinstance(x, Query), self.query_list)):\n",
     "            raise ValueError(\"Must pass a list of queries\")\n",
-    "\n",
+    "    # overkill - dataclass creates repr automatically, as well as comparison methods.\n",
     "    def __str__(self):\n",
     "        class_name = self.__class__.__name__\n",
     "        queries = \"\\n\".join(map(str, self.query_list))\n",
